UBR-353 Add ticket sale cancellation.
