# web/swagger.json
@@ -973,33 +973,26 @@
         ]
       }
     },
-    "/passholders/{uitpasNumber}/activities/ticket-sales/{ticketSaleId}": {
+    "/passholders/activities/ticket-sales/{ticketSaleId}/cancel": {
       "delete": {
-        "summary": "Delete a ticketsale from the passholder or group.",
+        "summary": "Cancel a ticket sale.",
         "description": "Authentication and an active counter are required.",
-        "operationId": "deleteTicketSale",
+        "operationId": "cancelTicketSale",
         "produces": [
           "application/json"
         ],
         "parameters": [
           {
-            "name": "uitpasNumber",
-            "in": "path",
-            "description": "The uitpas number of the passholder or group.",
-            "required": true,
-            "type": "string"
-          },
-          {
             "name": "ticketSaleId",
             "in": "path",
-            "description": "The id of the ticket sale that should be deleted.",
+            "description": "The id of the ticket sale that should be canceled.",
             "required": true,
             "type": "string"
           }
         ],
         "responses": {
           "200": {
-            "description": "Successfully deleted the ticket sale from the passholder or group."
+            "description": "Successfully cancelled the ticket sale."
           },
           "400": {
             "description": "UiTPAS API error."
@@ -1010,7 +1003,6 @@
         },
         "tags": [
           "Activity",
-          "PassHolder",
           "Ticketsale"
         ]
       }
